--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
   "homepage": "https://github.com/snaomix/gh-pages#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-minimizer-webpack-plugin": "^3.8.3",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "purgecss-webpack-plugin": "^5.0.0",
     "sass": "~1.63.6",
     "sass-loader": "^13.3.2",
+    "sharp": "^0.32.1",
     "stylelint": "^15.9.0",
     "stylelint-config-recess-order": "^4.2.0",
     "stylelint-config-standard-scss": "^9.0.0",
@@ -49,5 +52,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0"
+  },
+  "overrides": {
+    "semver": ">7.5.2"
   }
 }
