--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:css": "stylelint src/scss/*.scss",
     "check:css": "prettier --check 'src/scss/*.scss'",
     "format:css": "prettier --write 'src/scss/*.scss'",
-    "format": "prettier --write 'src/**/*.{js,json}'"
+    "format": "prettier --write 'src/**/*.{js,json}'",
+    "check:html": "htmlhint 'src/**/*.html'"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "htmlhint": "^1.1.4",
     "image-minimizer-webpack-plugin": "^3.8.3",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.0",
@@ -52,8 +54,5 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0"
-  },
-  "overrides": {
-    "semver": ">7.5.2"
   }
 }
