--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.3",
     "purgecss-webpack-plugin": "^5.0.0",
-    "sass": "~1.69.4",
+    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "sharp": "^0.32.6",
     "stylelint": "^15.11.0",
     "stylelint-config-recess-order": "^4.3.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "stylelint-scss": "^5.2.1",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-scss": "^5.3.0",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
