--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "check:css": "prettier --check 'src/scss/*.scss'",
     "format:css": "prettier --write 'src/scss/*.scss'",
     "format": "prettier --write 'src/**/*.{js,json}'",
-    "check:html": "htmlhint 'src/**/*.html'"
+    "lint:js": "eslint 'src/**/*.js'",
+    "lint:html": "eslint 'src/**/*.html'"
   },
   "repository": {
     "type": "git",
@@ -32,10 +33,15 @@
   },
   "homepage": "https://github.com/snaomix/gh-pages#readme",
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@html-eslint/eslint-plugin": "^0.26.0",
+    "@html-eslint/parser": "^0.26.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "glob": "^11.0.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "htmlhint": "^1.1.4",
     "image-minimizer-webpack-plugin": "^4.1.0",
     "mini-css-extract-plugin": "^2.9.1",
     "prettier": "^3.3.3",
@@ -50,7 +56,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
