--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,9 @@ jobs:
     strategy:
       matrix:
         node-version: [24.x]
-
+    permissions:
+      id-token: write
+      attestations: write
     steps:
       - uses: actions/checkout@v5
 
@@ -35,6 +37,10 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build --if-present
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-path: './docs'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
