--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,10 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
-
+      - name: Run npm audit (Vulnerability Check)
+        run: npm audit --audit-level=high
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Build
         run: npm run build --if-present
       - name: Generate artifact attestation
