--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "homepage": "https://github.com/snaomix/gh-pages#readme",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@fullhuman/postcss-purgecss": "^8.0.0",
     "@html-eslint/eslint-plugin": "^0.53.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.39.2",
@@ -47,8 +48,9 @@
     "html-webpack-plugin": "^5.6.6",
     "image-minimizer-webpack-plugin": "^4.1.4",
     "mini-css-extract-plugin": "^2.10.0",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
     "prettier": "^3.8.1",
-    "purgecss-webpack-plugin": "^7.0.2",
     "sass": "1.77.6",
     "sass-loader": "^16.0.6",
     "sharp": "^0.34.5",
