--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "prettier": "^3.8.1",
-    "sass": "1.77.6",
+    "sass": "^1.97.3",
     "sass-loader": "^16.0.6",
     "sharp": "^0.34.5",
     "stylelint": "^17.0.0",
