--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
   },
   "homepage": "https://github.com/snaomix/gh-pages#readme",
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "^10.0.1",
     "@fullhuman/postcss-purgecss": "^8.0.0",
     "@html-eslint/eslint-plugin": "^0.54.2",
     "css-loader": "^7.1.3",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
     "glob": "^13.0.1",
     "html-loader": "^5.1.0",
@@ -48,7 +48,7 @@
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "prettier": "^3.8.1",
-    "sass": "^1.97.3",
+    "sass-embedded": "^1.97.3",
     "sass-loader": "^16.0.7",
     "sharp": "^0.34.5",
     "stylelint": "^17.1.1",
