--- a/package.json
+++ b/package.json
@@ -48,11 +48,12 @@
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "prettier": "^3.8.1",
+    "sass": "^1.97.3",
     "sass-embedded": "^1.97.3",
     "sass-loader": "^16.0.7",
     "sharp": "^0.34.5",
     "stylelint": "^17.1.1",
-    "stylelint-config-recess-order": "^7.6.0",
+    "stylelint-config-recess-order": "^7.6.1",
     "stylelint-config-standard-scss": "^17.0.0",
     "stylelint-scss": "^7.0.0",
     "terser-webpack-plugin": "^5.3.16",
